@@ -3,6 +3,7 @@ package com.service;
 import com.dto.BeverageRequestDTO;
 import com.dto.ResponseBeverage;
 import com.exception.BadRequestException;
+import com.exception.ResourceConflictException;
 import com.exception.ResourceNotFoundException;
 import com.model.Beverage;
 import com.repository.BeverageRepository;
@@ -16,6 +17,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -36,10 +38,10 @@ class BeverageServiceTest {
     private BeverageRequestDTO validRequestDTO;
     private UUID testId;
     private Beverage savedBeverage;
+    private Beverage savedBeverage2;
 
     @BeforeEach
     void setUp() {
-
         testId = UUID.randomUUID();
 
         validRequestDTO = new BeverageRequestDTO(
@@ -59,6 +61,16 @@ class BeverageServiceTest {
                 "https://example.com/sierra-nevada.jpg",
                 LocalDateTime.now()
         );
+
+        savedBeverage2 = new Beverage(
+                UUID.randomUUID(),
+                "Lagunitas IPA",
+                "IPA",
+                new BigDecimal("6.2"),
+                "A well-rounded, highly drinkable IPA with citrus and pine notes",
+                "https://example.com/lagunitas.jpg",
+                LocalDateTime.now()
+        );
     }
 
     // ========== CREATE OPERATIONS ==========
@@ -66,61 +78,104 @@ class BeverageServiceTest {
     // CREATE - Happy Paths
     @Test
     void createBeverageShouldSaveBeverageSuccessfully() {
-        // Arrange
+        when(beverageRepository.existsByBeverageName(validRequestDTO.getBeverageName())).thenReturn(false);
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
         ResponseBeverage result = beverageService.createBeverage(validRequestDTO);
 
-        // Assert
         assertNotNull(result);
         assertEquals(testId, result.getId());
         assertEquals("Sierra Nevada Pale Ale", result.getBeverageName());
         assertNotNull(result.getCreatedAt());
+        verify(beverageRepository, times(1)).existsByBeverageName(validRequestDTO.getBeverageName());
         verify(beverageRepository, times(1)).save(any(Beverage.class));
     }
 
     @Test
     void createBeveragesShouldSaveMultipleBeverages() {
-        // Arrange
         BeverageRequestDTO requestDTO1 = new BeverageRequestDTO("Guinness Stout", "Stout", new BigDecimal("4.2"), "Rich and creamy Irish stout with roasted flavors", "https://example.com/guinness.jpg");
         BeverageRequestDTO requestDTO2 = new BeverageRequestDTO("Corona Extra Lager", "Lager", new BigDecimal("4.5"), "Light and refreshing Mexican lager with citrus notes", "https://example.com/corona.jpg");
-        List<BeverageRequestDTO> RequestDTOs = Arrays.asList(requestDTO1, requestDTO2);
+        List<BeverageRequestDTO> requestDTOs = Arrays.asList(requestDTO1, requestDTO2);
 
         Beverage beverage1 = new Beverage(UUID.randomUUID(), "Guinness Stout", "Stout", new BigDecimal("4.2"), "Rich and creamy Irish stout with roasted flavors", "https://example.com/guinness.jpg", LocalDateTime.now());
         Beverage beverage2 = new Beverage(UUID.randomUUID(), "Corona Extra Lager", "Lager", new BigDecimal("4.5"), "Light and refreshing Mexican lager with citrus notes", "https://example.com/corona.jpg", LocalDateTime.now());
         List<Beverage> beverages = Arrays.asList(beverage1, beverage2);
 
+        when(beverageRepository.existsByBeverageName("Guinness Stout")).thenReturn(false);
+        when(beverageRepository.existsByBeverageName("Corona Extra Lager")).thenReturn(false);
         when(beverageRepository.saveAll(anyList())).thenReturn(beverages);
 
-        // Act
-        List<ResponseBeverage> result = beverageService.createBeverages(RequestDTOs);
+        List<ResponseBeverage> result = beverageService.createBeverages(requestDTOs);
 
-        // Assert
         assertNotNull(result);
         assertEquals(2, result.size());
+        verify(beverageRepository, times(2)).existsByBeverageName(anyString());
         verify(beverageRepository, times(1)).saveAll(anyList());
     }
 
     // CREATE - Unhappy Paths
     @Test
     void createBeverageShouldThrowExceptionWhenBeverageIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.createBeverage(null));
         verify(beverageRepository, never()).save(any(Beverage.class));
     }
 
     @Test
+    void createBeverageShouldThrowConflictWhenBeverageNameExists() {
+        when(beverageRepository.existsByBeverageName(validRequestDTO.getBeverageName())).thenReturn(true);
+
+        ResourceConflictException exception = assertThrows(
+                ResourceConflictException.class,
+                () -> beverageService.createBeverage(validRequestDTO)
+        );
+
+        assertTrue(exception.getMessage().contains("already exists"));
+        verify(beverageRepository, times(1)).existsByBeverageName(validRequestDTO.getBeverageName());
+        verify(beverageRepository, never()).save(any(Beverage.class));
+    }
+
+    @Test
     void createBeveragesShouldThrowExceptionWhenListIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.createBeverages(null));
         verify(beverageRepository, never()).saveAll(anyList());
     }
 
     @Test
     void createBeveragesShouldThrowExceptionWhenListIsEmpty() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.createBeverages(List.of()));
+        verify(beverageRepository, never()).saveAll(anyList());
+    }
+
+    @Test
+    void createBeveragesShouldThrowConflictWhenDuplicateNamesInRequest() {
+        BeverageRequestDTO requestDTO1 = new BeverageRequestDTO("Guinness Stout", "Stout", new BigDecimal("4.2"), "Rich and creamy Irish stout with roasted flavors", "https://example.com/guinness.jpg");
+        BeverageRequestDTO requestDTO2 = new BeverageRequestDTO("Guinness Stout", "Stout", new BigDecimal("4.2"), "Rich and creamy Irish stout with roasted flavors", "https://example.com/guinness.jpg");
+        List<BeverageRequestDTO> requestDTOs = Arrays.asList(requestDTO1, requestDTO2);
+
+        ResourceConflictException exception = assertThrows(
+                ResourceConflictException.class,
+                () -> beverageService.createBeverages(requestDTOs)
+        );
+
+        assertTrue(exception.getMessage().contains("Duplicate beverage names found in request"));
+        verify(beverageRepository, never()).saveAll(anyList());
+    }
+
+    @Test
+    void createBeveragesShouldThrowConflictWhenBeverageNameExistsInDatabase() {
+        BeverageRequestDTO requestDTO1 = new BeverageRequestDTO("Guinness Stout", "Stout", new BigDecimal("4.2"), "Rich and creamy Irish stout with roasted flavors", "https://example.com/guinness.jpg");
+        BeverageRequestDTO requestDTO2 = new BeverageRequestDTO("Corona Extra Lager", "Lager", new BigDecimal("4.5"), "Light and refreshing Mexican lager with citrus notes", "https://example.com/corona.jpg");
+        List<BeverageRequestDTO> requestDTOs = Arrays.asList(requestDTO1, requestDTO2);
+
+        when(beverageRepository.existsByBeverageName("Guinness Stout")).thenReturn(true);
+
+        ResourceConflictException exception = assertThrows(
+                ResourceConflictException.class,
+                () -> beverageService.createBeverages(requestDTOs)
+        );
+
+        assertTrue(exception.getMessage().contains("already exists"));
+        verify(beverageRepository, times(1)).existsByBeverageName("Guinness Stout");
         verify(beverageRepository, never()).saveAll(anyList());
     }
 
@@ -129,14 +184,11 @@ class BeverageServiceTest {
     // READ - Happy Paths
     @Test
     void getAllBeveragesShouldReturnAllBeverages() {
-        // Arrange
         List<Beverage> beverages = Arrays.asList(savedBeverage);
         when(beverageRepository.findAll()).thenReturn(beverages);
 
-        // Act
         List<ResponseBeverage> result = beverageService.getAllBeverages();
 
-        // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals("Sierra Nevada Pale Ale", result.get(0).getBeverageName());
@@ -144,14 +196,22 @@ class BeverageServiceTest {
     }
 
     @Test
+    void getAllBeveragesShouldReturnEmptyListWhenNoBeverages() {
+        when(beverageRepository.findAll()).thenReturn(Collections.emptyList());
+
+        List<ResponseBeverage> result = beverageService.getAllBeverages();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+        verify(beverageRepository, times(1)).findAll();
+    }
+
+    @Test
     void getBeverageByIdShouldReturnBeverageWhenExists() {
-        // Arrange
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
 
-        // Act
         ResponseBeverage result = beverageService.getBeverageById(testId);
 
-        // Assert
         assertNotNull(result);
         assertEquals("Sierra Nevada Pale Ale", result.getBeverageName());
         assertEquals(testId, result.getId());
@@ -159,67 +219,38 @@ class BeverageServiceTest {
     }
 
     @Test
-    void getBeverageByIdShouldThrowExceptionWhenNotExists() {
-        // Arrange
-        UUID nonExistentId = UUID.randomUUID();
-        when(beverageRepository.findById(nonExistentId)).thenReturn(Optional.empty());
-
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> beverageService.getBeverageById(nonExistentId));
-        verify(beverageRepository, times(1)).findById(nonExistentId);
-    }
-
-    @Test
     void getBeverageByNameShouldReturnBeverageWhenExists() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
+        when(beverageRepository.findByBeverageName("Sierra Nevada Pale Ale")).thenReturn(Optional.of(savedBeverage));
 
-        // Act
-        Optional<ResponseBeverage> result = beverageService.getBeverageByName("Sierra Nevada Pale Ale");
+        ResponseBeverage result = beverageService.getBeverageByName("Sierra Nevada Pale Ale");
 
-        // Assert
-        assertTrue(result.isPresent());
-        assertEquals("Sierra Nevada Pale Ale", result.get().getBeverageName());
-        verify(beverageRepository, times(1)).findAll();
-    }
-
-    @Test
-    void getBeverageByNameShouldReturnEmptyWhenNotExists() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
-
-        // Act
-        Optional<ResponseBeverage> result = beverageService.getBeverageByName("Non-existent Beer");
-
-        // Assert
-        assertFalse(result.isPresent());
-        verify(beverageRepository, times(1)).findAll();
-    }
-
-    @Test
-    void getBeveragesByTypeShouldReturnMatchingBeverages() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
-
-        // Act
-        List<ResponseBeverage> result = beverageService.getBeveragesByType("Pale Ale");
-
-        // Assert
         assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals("Pale Ale", result.get(0).getType());
-        verify(beverageRepository, times(1)).findAll();
+        assertEquals("Sierra Nevada Pale Ale", result.getBeverageName());
+        verify(beverageRepository, times(1)).findByBeverageName("Sierra Nevada Pale Ale");
+    }
+
+    @Test
+    void getBeveragesByTypeShouldReturnMatchingBeveragesCaseInsensitive() {
+        when(beverageRepository.findAll()).thenReturn(Arrays.asList(savedBeverage, savedBeverage2));
+
+        // Test with different cases
+        List<ResponseBeverage> result1 = beverageService.getBeveragesByType("pale ale");
+        List<ResponseBeverage> result2 = beverageService.getBeveragesByType("PALE ALE");
+        List<ResponseBeverage> result3 = beverageService.getBeveragesByType("Pale Ale");
+
+        assertEquals(1, result1.size());
+        assertEquals(1, result2.size());
+        assertEquals(1, result3.size());
+        assertEquals("Pale Ale", result1.get(0).getType());
+        verify(beverageRepository, times(3)).findAll();
     }
 
     @Test
     void getBeveragesByTypeShouldReturnEmptyListWhenNoMatches() {
-        // Arrange
         when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
 
-        // Act
         List<ResponseBeverage> result = beverageService.getBeveragesByType("Stout");
 
-        // Assert
         assertNotNull(result);
         assertEquals(0, result.size());
         verify(beverageRepository, times(1)).findAll();
@@ -227,42 +258,45 @@ class BeverageServiceTest {
 
     @Test
     void getBeveragesByAbvRangeShouldReturnMatchingBeverages() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
+        when(beverageRepository.findByAbvBetween(new BigDecimal("4.0"), new BigDecimal("6.0")))
+                .thenReturn(List.of(savedBeverage));
 
-        // Act
-        List<ResponseBeverage> result = beverageService.getBeveragesByAbvRange(new BigDecimal("4.0"), new BigDecimal("6.0"));
+        List<ResponseBeverage> result = beverageService.getBeveragesByAbvRange(
+                new BigDecimal("4.0"),
+                new BigDecimal("6.0")
+        );
 
-        // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals(0, new BigDecimal("5.6").compareTo(result.get(0).getAbv()));
-        verify(beverageRepository, times(1)).findAll();
+        verify(beverageRepository, times(1)).findByAbvBetween(new BigDecimal("4.0"), new BigDecimal("6.0"));
     }
 
     @Test
     void getBeveragesByAbvRangeShouldReturnEmptyListWhenNoMatches() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
+        when(beverageRepository.findByAbvBetween(new BigDecimal("10.0"), new BigDecimal("15.0")))
+                .thenReturn(Collections.emptyList());
 
-        // Act
-        List<ResponseBeverage> result = beverageService.getBeveragesByAbvRange(new BigDecimal("10.0"), new BigDecimal("15.0"));
+        List<ResponseBeverage> result = beverageService.getBeveragesByAbvRange(
+                new BigDecimal("10.0"),
+                new BigDecimal("15.0")
+        );
 
-        // Assert
         assertNotNull(result);
         assertEquals(0, result.size());
-        verify(beverageRepository, times(1)).findAll();
+        verify(beverageRepository, times(1)).findByAbvBetween(new BigDecimal("10.0"), new BigDecimal("15.0"));
     }
 
     @Test
     void getBeveragesByTypeAndAbvRangeShouldReturnMatchingBeverages() {
-        // Arrange
         when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
 
-        // Act
-        List<ResponseBeverage> result = beverageService.getBeveragesByTypeAndAbvRange("Pale Ale", new BigDecimal("4.0"), new BigDecimal("6.0"));
+        List<ResponseBeverage> result = beverageService.getBeveragesByTypeAndAbvRange(
+                "Pale Ale",
+                new BigDecimal("4.0"),
+                new BigDecimal("6.0")
+        );
 
-        // Assert
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals("Pale Ale", result.get(0).getType());
@@ -272,66 +306,64 @@ class BeverageServiceTest {
 
     @Test
     void beverageExistsShouldReturnTrueWhenExists() {
-        // Arrange
         when(beverageRepository.existsById(testId)).thenReturn(true);
 
-        // Act
         boolean result = beverageService.beverageExists(testId);
 
-        // Assert
         assertTrue(result);
         verify(beverageRepository, times(1)).existsById(testId);
     }
 
     @Test
     void beverageExistsShouldReturnFalseWhenNotExists() {
-        // Arrange
         UUID nonExistentId = UUID.randomUUID();
         when(beverageRepository.existsById(nonExistentId)).thenReturn(false);
 
-        // Act
         boolean result = beverageService.beverageExists(nonExistentId);
 
-        // Assert
         assertFalse(result);
         verify(beverageRepository, times(1)).existsById(nonExistentId);
     }
 
     @Test
     void beverageNameExistsShouldReturnTrueWhenExists() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
+        when(beverageRepository.existsByBeverageName("Sierra Nevada Pale Ale")).thenReturn(true);
 
-        // Act
         boolean result = beverageService.beverageNameExists("Sierra Nevada Pale Ale");
 
-        // Assert
         assertTrue(result);
-        verify(beverageRepository, times(1)).findAll();
+        verify(beverageRepository, times(1)).existsByBeverageName("Sierra Nevada Pale Ale");
     }
 
     @Test
     void beverageNameExistsShouldReturnFalseWhenNotExists() {
-        // Arrange
-        when(beverageRepository.findAll()).thenReturn(List.of(savedBeverage));
+        when(beverageRepository.existsByBeverageName("Non-existent Beer")).thenReturn(false);
 
-        // Act
         boolean result = beverageService.beverageNameExists("Non-existent Beer");
 
-        // Assert
         assertFalse(result);
-        verify(beverageRepository, times(1)).findAll();
+        verify(beverageRepository, times(1)).existsByBeverageName("Non-existent Beer");
+    }
+
+    @Test
+    void beverageNameExistsShouldReturnFalseWhenNameIsBlank() {
+        // Should return false, not throw exception
+        boolean result1 = beverageService.beverageNameExists("");
+        boolean result2 = beverageService.beverageNameExists("   ");
+        boolean result3 = beverageService.beverageNameExists(null);
+
+        assertFalse(result1);
+        assertFalse(result2);
+        assertFalse(result3);
+        verify(beverageRepository, never()).existsByBeverageName(anyString());
     }
 
     @Test
     void getTotalBeverageCountShouldReturnCorrectCount() {
-        // Arrange
         when(beverageRepository.count()).thenReturn(5L);
 
-        // Act
         long result = beverageService.getTotalBeverageCount();
 
-        // Assert
         assertEquals(5L, result);
         verify(beverageRepository, times(1)).count();
     }
@@ -339,72 +371,76 @@ class BeverageServiceTest {
     // READ - Unhappy Paths
     @Test
     void getBeverageByIdShouldThrowExceptionWhenIdIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.getBeverageById(null));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
+    void getBeverageByIdShouldThrowExceptionWhenNotExists() {
+        UUID nonExistentId = UUID.randomUUID();
+        when(beverageRepository.findById(nonExistentId)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> beverageService.getBeverageById(nonExistentId));
+        verify(beverageRepository, times(1)).findById(nonExistentId);
+    }
+
+    @Test
     void getBeverageByNameShouldThrowExceptionWhenNameIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.getBeverageByName(null));
-        verify(beverageRepository, never()).findAll();
+        verify(beverageRepository, never()).findByBeverageName(anyString());
     }
 
     @Test
     void getBeverageByNameShouldThrowExceptionWhenNameIsEmpty() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.getBeverageByName("   "));
-        verify(beverageRepository, never()).findAll();
+        verify(beverageRepository, never()).findByBeverageName(anyString());
+    }
+
+    @Test
+    void getBeverageByNameShouldThrowExceptionWhenNameIsTooShort() {
+        assertThrows(BadRequestException.class, () -> beverageService.getBeverageByName("Beer"));
+        verify(beverageRepository, never()).findByBeverageName(anyString());
+    }
+
+    @Test
+    void getBeverageByNameShouldThrowNotFoundWhenBeverageDoesNotExist() {
+        when(beverageRepository.findByBeverageName("Non-existent Beer")).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class,
+                () -> beverageService.getBeverageByName("Non-existent Beer"));
+        verify(beverageRepository, times(1)).findByBeverageName("Non-existent Beer");
     }
 
     @Test
     void getBeveragesByTypeShouldThrowExceptionWhenTypeIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.getBeveragesByType(null));
         verify(beverageRepository, never()).findAll();
     }
 
     @Test
     void getBeveragesByTypeShouldThrowExceptionWhenTypeIsEmpty() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.getBeveragesByType("   "));
         verify(beverageRepository, never()).findAll();
     }
 
     @Test
     void getBeveragesByAbvRangeShouldThrowExceptionWhenMinAbvIsNegative() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.getBeveragesByAbvRange(new BigDecimal("-1"), new BigDecimal("10")));
-        verify(beverageRepository, never()).findAll();
+        assertThrows(BadRequestException.class,
+                () -> beverageService.getBeveragesByAbvRange(new BigDecimal("-1"), new BigDecimal("10")));
+        verify(beverageRepository, never()).findByAbvBetween(any(), any());
     }
 
     @Test
     void getBeveragesByAbvRangeShouldThrowExceptionWhenMaxAbvLessThanMinAbv() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.getBeveragesByAbvRange(new BigDecimal("10"), new BigDecimal("5")));
-        verify(beverageRepository, never()).findAll();
+        assertThrows(BadRequestException.class,
+                () -> beverageService.getBeveragesByAbvRange(new BigDecimal("10"), new BigDecimal("5")));
+        verify(beverageRepository, never()).findByAbvBetween(any(), any());
     }
 
     @Test
     void beverageExistsShouldThrowExceptionWhenIdIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.beverageExists(null));
         verify(beverageRepository, never()).existsById(any(UUID.class));
-    }
-
-    @Test
-    void beverageNameExistsShouldThrowExceptionWhenNameIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.beverageNameExists(null));
-        verify(beverageRepository, never()).findAll();
-    }
-
-    @Test
-    void beverageNameExistsShouldThrowExceptionWhenNameIsEmpty() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.beverageNameExists("   "));
-        verify(beverageRepository, never()).findAll();
     }
 
     // ========== UPDATE OPERATIONS ==========
@@ -412,45 +448,66 @@ class BeverageServiceTest {
     // UPDATE - Happy Paths
     @Test
     void updateBeverageShouldUpdateAllFieldsSuccessfully() {
-        // Arrange
-        BeverageRequestDTO requestDTO = new BeverageRequestDTO("Updated Beer Name", "Updated Type", new BigDecimal("8.5"), "This is an updated description for the beverage", "https://example.com/updated.jpg");
+        BeverageRequestDTO requestDTO = new BeverageRequestDTO(
+                "Updated Beer Name",
+                "Updated Type",
+                new BigDecimal("8.5"),
+                "This is an updated description for the beverage",
+                "https://example.com/updated.jpg"
+        );
+        when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
+        when(beverageRepository.existsByBeverageName("Updated Beer Name")).thenReturn(false);
+        when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
+
+        ResponseBeverage result = beverageService.updateBeverage(testId, requestDTO);
+
+        assertNotNull(result);
+        verify(beverageRepository, times(1)).findById(testId);
+        verify(beverageRepository, times(1)).existsByBeverageName("Updated Beer Name");
+        verify(beverageRepository, times(1)).save(any(Beverage.class));
+    }
+
+    @Test
+    void updateBeverageShouldNotCheckExistenceWhenNameUnchanged() {
+        BeverageRequestDTO requestDTO = new BeverageRequestDTO(
+                "Sierra Nevada Pale Ale",  // Same name
+                "Updated Type",
+                new BigDecimal("8.5"),
+                "This is an updated description for the beverage",
+                "https://example.com/updated.jpg"
+        );
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
         ResponseBeverage result = beverageService.updateBeverage(testId, requestDTO);
 
-        // Assert
         assertNotNull(result);
         verify(beverageRepository, times(1)).findById(testId);
+        verify(beverageRepository, never()).existsByBeverageName(anyString());
         verify(beverageRepository, times(1)).save(any(Beverage.class));
     }
 
     @Test
     void updateBeverageNameShouldUpdateNameSuccessfully() {
-        // Arrange
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
+        when(beverageRepository.existsByBeverageName("New Beer Name")).thenReturn(false);
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
         ResponseBeverage result = beverageService.updateBeverageName(testId, "New Beer Name");
 
-        // Assert
         assertNotNull(result);
         verify(beverageRepository, times(1)).findById(testId);
+        verify(beverageRepository, times(1)).existsByBeverageName("New Beer Name");
         verify(beverageRepository, times(1)).save(any(Beverage.class));
     }
 
     @Test
     void updateBeverageTypeShouldUpdateTypeSuccessfully() {
-        // Arrange
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
         ResponseBeverage result = beverageService.updateBeverageType(testId, "New Type");
 
-        // Assert
         assertNotNull(result);
         verify(beverageRepository, times(1)).findById(testId);
         verify(beverageRepository, times(1)).save(any(Beverage.class));
@@ -458,14 +515,11 @@ class BeverageServiceTest {
 
     @Test
     void updateBeverageAbvShouldUpdateAbvSuccessfully() {
-        // Arrange
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
         ResponseBeverage result = beverageService.updateBeverageAbv(testId, new BigDecimal("10.5"));
 
-        // Assert
         assertNotNull(result);
         verify(beverageRepository, times(1)).findById(testId);
         verify(beverageRepository, times(1)).save(any(Beverage.class));
@@ -473,14 +527,14 @@ class BeverageServiceTest {
 
     @Test
     void updateBeverageDescriptionShouldUpdateDescriptionSuccessfully() {
-        // Arrange
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
-        ResponseBeverage result = beverageService.updateBeverageDescription(testId, "This is a brand new updated description");
+        ResponseBeverage result = beverageService.updateBeverageDescription(
+                testId,
+                "This is a brand new updated description"
+        );
 
-        // Assert
         assertNotNull(result);
         verify(beverageRepository, times(1)).findById(testId);
         verify(beverageRepository, times(1)).save(any(Beverage.class));
@@ -488,14 +542,14 @@ class BeverageServiceTest {
 
     @Test
     void updateBeverageImageUrlShouldUpdateImageUrlSuccessfully() {
-        // Arrange
         when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
         when(beverageRepository.save(any(Beverage.class))).thenReturn(savedBeverage);
 
-        // Act
-        ResponseBeverage result = beverageService.updateBeverageImageUrl(testId, "https://example.com/new-image.jpg");
+        ResponseBeverage result = beverageService.updateBeverageImageUrl(
+                testId,
+                "https://example.com/new-image.jpg"
+        );
 
-        // Assert
         assertNotNull(result);
         verify(beverageRepository, times(1)).findById(testId);
         verify(beverageRepository, times(1)).save(any(Beverage.class));
@@ -504,113 +558,173 @@ class BeverageServiceTest {
     // UPDATE - Unhappy Paths
     @Test
     void updateBeverageShouldThrowExceptionWhenIdIsNull() {
-        // Arrange
-        BeverageRequestDTO requestDTO = new BeverageRequestDTO("Updated Beer", "IPA", new BigDecimal("6.0"), "Updated description for the beer", "https://example.com/updated.jpg");
+        BeverageRequestDTO requestDTO = new BeverageRequestDTO(
+                "Updated Beer",
+                "IPA",
+                new BigDecimal("6.0"),
+                "Updated description for the beer",
+                "https://example.com/updated.jpg"
+        );
 
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.updateBeverage(null, requestDTO));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageShouldThrowExceptionWhenUpdatedBeverageIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.updateBeverage(testId, null));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageShouldThrowExceptionWhenBeverageNotFound() {
-        // Arrange
-        BeverageRequestDTO requestDTO = new BeverageRequestDTO("Updated Beer", "IPA", new BigDecimal("6.0"), "Updated description for the beer", "https://example.com/updated.jpg");
+        BeverageRequestDTO requestDTO = new BeverageRequestDTO(
+                "Updated Beer",
+                "IPA",
+                new BigDecimal("6.0"),
+                "Updated description for the beer",
+                "https://example.com/updated.jpg"
+        );
         UUID nonExistentId = UUID.randomUUID();
         when(beverageRepository.findById(nonExistentId)).thenReturn(Optional.empty());
 
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> beverageService.updateBeverage(nonExistentId, requestDTO));
+        assertThrows(ResourceNotFoundException.class,
+                () -> beverageService.updateBeverage(nonExistentId, requestDTO));
         verify(beverageRepository, times(1)).findById(nonExistentId);
+        verify(beverageRepository, never()).save(any(Beverage.class));
+    }
+
+    @Test
+    void updateBeverageShouldThrowConflictWhenNewNameExists() {
+        BeverageRequestDTO requestDTO = new BeverageRequestDTO(
+                "Existing Beer Name",
+                "IPA",
+                new BigDecimal("6.0"),
+                "Updated description for the beer",
+                "https://example.com/updated.jpg"
+        );
+        when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
+        when(beverageRepository.existsByBeverageName("Existing Beer Name")).thenReturn(true);
+
+        ResourceConflictException exception = assertThrows(
+                ResourceConflictException.class,
+                () -> beverageService.updateBeverage(testId, requestDTO)
+        );
+
+        assertTrue(exception.getMessage().contains("already exists"));
+        verify(beverageRepository, times(1)).findById(testId);
+        verify(beverageRepository, times(1)).existsByBeverageName("Existing Beer Name");
         verify(beverageRepository, never()).save(any(Beverage.class));
     }
 
     @Test
     void updateBeverageNameShouldThrowExceptionWhenIdIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageName(null, "New Name"));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageName(null, "New Name"));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageNameShouldThrowExceptionWhenNameIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageName(testId, null));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageName(testId, null));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageNameShouldThrowExceptionWhenNameIsEmpty() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageName(testId, "   "));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageName(testId, "   "));
+        verify(beverageRepository, never()).findById(any(UUID.class));
+    }
+
+    @Test
+    void updateBeverageNameShouldThrowExceptionWhenNameIsTooShort() {
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageName(testId, "Beer"));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageNameShouldThrowExceptionWhenBeverageNotFound() {
-        // Arrange
         UUID nonExistentId = UUID.randomUUID();
         when(beverageRepository.findById(nonExistentId)).thenReturn(Optional.empty());
 
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> beverageService.updateBeverageName(nonExistentId, "New Name"));
+        assertThrows(ResourceNotFoundException.class,
+                () -> beverageService.updateBeverageName(nonExistentId, "New Beer Name"));
         verify(beverageRepository, times(1)).findById(nonExistentId);
         verify(beverageRepository, never()).save(any(Beverage.class));
     }
 
     @Test
+    void updateBeverageNameShouldThrowConflictWhenNewNameExists() {
+        when(beverageRepository.findById(testId)).thenReturn(Optional.of(savedBeverage));
+        when(beverageRepository.existsByBeverageName("Existing Name")).thenReturn(true);
+
+        ResourceConflictException exception = assertThrows(
+                ResourceConflictException.class,
+                () -> beverageService.updateBeverageName(testId, "Existing Name")
+        );
+
+        assertTrue(exception.getMessage().contains("already exists"));
+        verify(beverageRepository, times(1)).findById(testId);
+        verify(beverageRepository, times(1)).existsByBeverageName("Existing Name");
+        verify(beverageRepository, never()).save(any(Beverage.class));
+    }
+
+    @Test
     void updateBeverageTypeShouldThrowExceptionWhenTypeIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageType(testId, null));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageType(testId, null));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageTypeShouldThrowExceptionWhenTypeIsEmpty() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageType(testId, "   "));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageType(testId, "   "));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageAbvShouldThrowExceptionWhenAbvIsNegative() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageAbv(testId, new BigDecimal("-1")));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageAbv(testId, new BigDecimal("-1")));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageDescriptionShouldThrowExceptionWhenDescriptionIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageDescription(testId, null));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageDescription(testId, null));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageDescriptionShouldThrowExceptionWhenDescriptionIsEmpty() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageDescription(testId, "   "));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageDescription(testId, "   "));
+        verify(beverageRepository, never()).findById(any(UUID.class));
+    }
+
+    @Test
+    void updateBeverageDescriptionShouldThrowExceptionWhenDescriptionIsTooShort() {
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageDescription(testId, "Too short"));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageImageUrlShouldThrowExceptionWhenImageUrlIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageImageUrl(testId, null));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageImageUrl(testId, null));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
     @Test
     void updateBeverageImageUrlShouldThrowExceptionWhenImageUrlIsEmpty() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.updateBeverageImageUrl(testId, "   "));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.updateBeverageImageUrl(testId, "   "));
         verify(beverageRepository, never()).findById(any(UUID.class));
     }
 
@@ -619,50 +733,40 @@ class BeverageServiceTest {
     // DELETE - Happy Paths
     @Test
     void deleteBeverageShouldDeleteSuccessfully() {
-        // Arrange
         when(beverageRepository.existsById(testId)).thenReturn(true);
         doNothing().when(beverageRepository).deleteById(testId);
 
-        // Act
         beverageService.deleteBeverage(testId);
 
-        // Assert
         verify(beverageRepository, times(1)).existsById(testId);
         verify(beverageRepository, times(1)).deleteById(testId);
     }
 
     @Test
     void deleteAllBeveragesShouldDeleteAllSuccessfully() {
-        // Arrange
         doNothing().when(beverageRepository).deleteAll();
 
-        // Act
         beverageService.deleteAllBeverages();
 
-        // Assert
         verify(beverageRepository, times(1)).deleteAll();
     }
 
     @Test
     void deleteBeveragesByIdsShouldDeleteMultipleBeverages() {
-        // Arrange
         UUID id1 = UUID.randomUUID();
         UUID id2 = UUID.randomUUID();
         UUID id3 = UUID.randomUUID();
         List<UUID> ids = Arrays.asList(id1, id2, id3);
         doNothing().when(beverageRepository).deleteAllById(ids);
 
-        // Act
         beverageService.deleteBeveragesByIds(ids);
 
-        // Assert
         verify(beverageRepository, times(1)).deleteAllById(ids);
     }
 
     // DELETE - Unhappy Paths
     @Test
     void deleteBeverageShouldThrowExceptionWhenIdIsNull() {
-        // Act & Assert
         assertThrows(BadRequestException.class, () -> beverageService.deleteBeverage(null));
         verify(beverageRepository, never()).existsById(any(UUID.class));
         verify(beverageRepository, never()).deleteById(any(UUID.class));
@@ -670,27 +774,26 @@ class BeverageServiceTest {
 
     @Test
     void deleteBeverageShouldThrowExceptionWhenBeverageNotFound() {
-        // Arrange
         UUID nonExistentId = UUID.randomUUID();
         when(beverageRepository.existsById(nonExistentId)).thenReturn(false);
 
-        // Act & Assert
-        assertThrows(ResourceNotFoundException.class, () -> beverageService.deleteBeverage(nonExistentId));
+        assertThrows(ResourceNotFoundException.class,
+                () -> beverageService.deleteBeverage(nonExistentId));
         verify(beverageRepository, times(1)).existsById(nonExistentId);
         verify(beverageRepository, never()).deleteById(any(UUID.class));
     }
 
     @Test
     void deleteBeveragesByIdsShouldThrowExceptionWhenIdsIsNull() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.deleteBeveragesByIds(null));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.deleteBeveragesByIds(null));
         verify(beverageRepository, never()).deleteAllById(anyList());
     }
 
     @Test
     void deleteBeveragesByIdsShouldThrowExceptionWhenIdsIsEmpty() {
-        // Act & Assert
-        assertThrows(BadRequestException.class, () -> beverageService.deleteBeveragesByIds(List.of()));
+        assertThrows(BadRequestException.class,
+                () -> beverageService.deleteBeveragesByIds(List.of()));
         verify(beverageRepository, never()).deleteAllById(anyList());
     }
 }
